# xclash-automation

./: .gitignore  .pre-commit-config.yaml  00_START_HERE.txt  ANALYSIS.md  ARCHITECTURE.md  ARMS_RACE_SCHEDULE.md  CASTLE_TEMPLATE_EXTRACTION_ISSUES.md  COORDINATE_SYSTEM_EXPLANATION.md  CROP_ADJUSTMENT_GUIDE.txt  HANDSHAKE_ICON_EXTRACTION.md  HANDSHAKE_OPTIMIZATION.md  LEVEL20_FINDER_README.md  LEVEL_CROP_ANALYSIS_INDEX.md  LEVEL_CROP_ANALYSIS_REPORT.md  LEVEL_CROP_SUMMARY.txt  MINIMAP_EXTRACTION_COORDS.txt  MINIMAP_NAVIGATION_SYSTEM.md  OBJECT_DETECTION_GUIDE.md  PHASE1_CALIBRATION.md  PIXEL_BY_PIXEL_BREAKDOWN.txt  PLAYER_FINDER_README.md  README.md  README_LEVEL_CROP_FIX.txt  RESOLUTION_AND_TEMPLATES.md  RESOLUTION_SETUP.md  SUGGESTIONS.MD  Usersmailxclashcapture.pcapng  ZOOM_README.md  adb_helper.py  agent_iteration_2_report.json  auto_zoom_pyautogui.py  benchmark_handshake_timing.py  bluestacks_border_info.json  button_matcher.py  calibrate.bat  calibrate_interactive.py  calibrate_phase1.bat  calibration_log.txt  castle_database.csv  castle_matcher.py  (+97 more)
.claude/: CLAUDE.md  claude.MD  settings.local.json
calibration/: SLIDER_CALIBRATION.md  SLIDER_CALIBRATION_GUIDE.md  calibrate_slider_time.py  detect_object.py  slider_calibration_data.json  slider_time_calibration.json
calibration_findings/: calibration_log.txt
dashboard/: server.py
data/: kingdom_titles.json
deprecated/: action_chain_runner.py  analyze_all_zooms.py  analyze_button_text.py  analyze_corner_images.py  analyze_level_crops.py  analyze_match.py  analyze_roi_stats.py  analyze_roi_text.py  annotate_castles.py  annotate_red_button.py  auto_calibrate_zoom.py  auto_zoom.py  benchmark_handshake_timing.py  calibrate_map.py  calibrate_navigation.py  calibrate_zoom.py  calibrate_zoom_proper.py  capture_full_map.py  capture_map_screenshots.py  check_castle_scale.py  check_state.py  check_state_debug.py  check_template_vs_detected_size.py  close_dialogs.py  collect_training_data.py  compare_before_after_union_click.py  compare_dimensions.py  compare_world_vs_town_button.py  compute_roi_stats.py  create_20x20_grid.py  create_button_segments.py  create_correct_world_template.py  create_crop_comparison_visuals.py  create_grid.py  crop_button_area.py  crop_from_scaled.py  crop_red_button.py  crop_red_button_2.py  crop_red_button_3.py  debug_button_bounds.py  (+82 more)
docs/: ACTION_CAPTURE.md  BEAST_TRAINING_LOGIC.md  CHAT_INTERCEPT.md  DAEMON_ARCHITECTURE.md  (+12 more)
(+268 files in other folders)
